Fix Card Border and mobile gap

--- a/style.css
+++ b/style.css
@@ -60,8 +60,9 @@ body{
     align-items: center;
     padding: 24px;
     border-radius: 20px;
-    gap: 30px;
-    box-shadow: 8px 8px 0 #000;
+    gap: 24px;
+    box-shadow: 8px 8px 0 var(--black);
+    border: 1px solid var(--black);
 }
 
 .card .card-img{
@@ -111,6 +112,7 @@ body{
     font-weight: var(--font-weight-regular);
     width: 336px;
     opacity: 1;
+    line-height: 150%;
 }
 
 .card .card-info:hover{
@@ -175,7 +177,7 @@ footer a{
 
 .card{
     width: 327px;
-    height: 501px;
+    height: 501px;    
 }
 
 .card .card-img img{
